[package]
name = "netbattleship"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_cbor = "*"
structopt = "*"
eframe = {version = "0.20.0", optional = true}
tokio = {version = "1.23.0", features = ["full"]}
thiserror = "*"

[[bin]]
name = "netbattleship-gui"
path = "src/bin/gui.rs"
required-features = ["gui"]

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1

[features]
default = []
gui = ["eframe"]